Remove darwin 7 bits; MacPorts base doesn't compile on < darwin 8 anymore
git-svn-id: https://svn.macports.org/repository/macports/trunk@71578 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/devel/subversion-javahlbindings/Portfile
+++ b/dports/devel/subversion-javahlbindings/Portfile
@@ -91,11 +91,7 @@ post-destroot {
 		system "ln -sf ${prefix}/lib/svn-javahl/svn-javahl.jar ${destroot}${prefix}/share/java/svn-javahl.jar"
 		}
 
-# 10.3 says -> CarbonCore/MacTypes.h: No such file or directory
-platform darwin 7 {		configure.args-append \
-					--disable-keychain
-				}
-
+# CarbonCore/MacTypes.h: No such file or directory
 platform puredarwin {		configure.args-append \
 					--disable-keychain
 				}
