--- a/dports/devel/subversion-perlbindings/Portfile
+++ b/dports/devel/subversion-perlbindings/Portfile
@@ -80,11 +80,7 @@ post-destroot {
                 }
         }
 
-# 10.3 says -> CarbonCore/MacTypes.h: No such file or directory
-platform darwin 7 {		configure.args-append \
-					--disable-keychain
-				}
-
+# CarbonCore/MacTypes.h: No such file or directory
 platform puredarwin {		configure.args-append \
 					--disable-keychain
 				}
