--- a/dports/devel/subversion-python26bindings/Portfile
+++ b/dports/devel/subversion-python26bindings/Portfile
@@ -101,11 +101,7 @@ post-destroot {
 			"${destroot}${prefix}/lib/svn-python2.6"
 		}
 
-# 10.3 says -> CarbonCore/MacTypes.h: No such file or directory
-platform darwin 7 {		configure.args-append \
-					--disable-keychain
-				}
-
+# CarbonCore/MacTypes.h: No such file or directory
 platform puredarwin {		configure.args-append \
 					--disable-keychain
 				}
