--- a/dports/devel/subversion/Portfile
+++ b/dports/devel/subversion/Portfile
@@ -129,11 +129,7 @@ variant disable_keychain	description {Disables support for the Mac OS X Keychain
 					configure.args-append --disable-keychain
 				}
 
-# 10.3 says -> CarbonCore/MacTypes.h: No such file or directory
-platform darwin 7 {		configure.args-append \
-					--disable-keychain
-				}
-
+# CarbonCore/MacTypes.h: No such file or directory
 platform puredarwin {		configure.args-append \
 					--disable-keychain
 				}
