--- a/dports/devel/subversion-rubybindings/Portfile
+++ b/dports/devel/subversion-rubybindings/Portfile
@@ -77,11 +77,7 @@ variant no_neon description {Build without neon (http/https support)} {
                         configure.args-delete   --with-neon=${prefix}
                         }
 
-# 10.3 says -> CarbonCore/MacTypes.h: No such file or directory
-platform darwin 7 {		configure.args-append \
-					--disable-keychain
-				}
-
+# CarbonCore/MacTypes.h: No such file or directory
 platform puredarwin {		configure.args-append \
 					--disable-keychain
 				}
