Remove darwin 6 and 7 bits; MacPorts base doesn't compile on < darwin 8 anymore
git-svn-id: https://svn.macports.org/repository/macports/trunk@71579 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/sendfile/Portfile
+++ b/dports/net/sendfile/Portfile
@@ -82,7 +82,4 @@ notes "For being able to receive files, you'll have to use either
 xinetd or inetd, depending on what you are using.\n
 Use the following line if you'll go for inetd:
 saft stream tcp nowait root /path/to/sendfiled sendfiled\n
-For xinetd, just take a service file as an example.\n
-If you're running Mac OS X 10.2 or Darwin 6.x, you should
-add an entry in /etc/services to allow connections from and to
-port 487 both udp and tcp."
+For xinetd, just take a service file as an example."
