--- a/dports/math/nestedsums/Portfile
+++ b/dports/math/nestedsums/Portfile
@@ -2,7 +2,7 @@
 
 PortSystem 1.0
 name		nestedsums
-version		1.4.9
+version		1.4.12
 categories	math
 platforms	darwin
 maintainers	gwright
@@ -11,19 +11,19 @@ long_description	\
 		A Library for the Symbolic Expansion of a Class of	\
 		Transcendental Functions
 
-homepage	http://www.fis.unipr.it/~stefanw/
+homepage	http://wwwthep.physik.uni-mainz.de/~stefanw/nestedsums/
 master_sites	http://wwwthep.physik.uni-mainz.de/~stefanw/download/
 
-checksums	md5 5859cce3c541b0fd03bcd3fdf722c7e8
+checksums	sha1    07c19f2bf6a2cd43555deb9f5d16ec7ea7a97f65 \
+		rmd160  381256ed0aa4c55d1f3ea87f493b83e6a5befae1
 
 depends_lib	port:GiNaC
 
 #user_notes	On Tiger (10.4.x), Xcode 2.1 is required to avoid a bug
 #		in gcc which causes one of the tests to fail.
 
-default_variants	+test
-variant	test	{ test.run	yes
-		  test.cmd	make
-		  test.target	check
-		}
+test.run	yes
+test.target	check
 
+livecheck.type	regex
+livecheck.regex	{<dd>([0-9.]+)</dd>}
