--- a/dports/multimedia/frei0r-plugins/Portfile
+++ b/dports/multimedia/frei0r-plugins/Portfile
@@ -4,24 +4,24 @@
 PortSystem          1.0
 
 name                frei0r-plugins
-version             1.1.22-git20090709
+version             1.2
 categories          multimedia
-maintainers         nomaintainer
+maintainers         dennedy.org:dan
+
 description         Plugin API for video sources and filters
 long_description    frei0r is a minimalistic plugin API for video sources and filters. \
                     The behavior of the effects can be controlled from the host by simple \
                     parameters. The intent is to solve the recurring reimplementation or \
                     adaptation issue of standard effects. It is not meant as a generic API for \
                     all kinds of video applications.
+
 homepage            http://www.piksel.org/frei0r
+master_sites        http://www.piksel.no/frei0r/
 platforms           darwin
 
-fetch.type          git
-git.url             git://code.dyne.org/frei0r.git 
-git.branch          2eac2c32cf3e5878b63ac36b865e69657b4ee313 
-                 
-worksrcdir          frei0r
-configure.cmd       {./autogen.sh && ./configure}
+checksums           md5     7af2a36c33af2cd3dbd28e3ac79a3645 \
+                    sha1    d0283ad1f9d04503ac003fab3c818a99992968a9 \
+                    rmd160  5935f65cd7b558092cb7e33399ee797ff3ad8394
 
 depends_lib         port:gavl \
                     port:opencv
