sleuthkit: whitespace. add modeline.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71585 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/sleuthkit/Portfile
+++ b/dports/sysutils/sleuthkit/Portfile
@@ -1,32 +1,38 @@
+# -*- coding: utf-8; mode: tcl; c-basic-offset: 4; indent-tabs-mode: nil; tab-width: 4; truncate-lines: t -*- vim:fenc=utf-8:et:sw=4:ts=4:sts=4
 # $Id$
 
-PortSystem 1.0
+PortSystem          1.0
 
-name            sleuthkit
-version         3.0.1
-revision        1
-categories      sysutils
-maintainers     nomaintainer
-platforms       darwin
-description     Forensic toolkit
-long_description The Sleuth Kit (previously known as TASK) is a collection \
-	of UNIX-based command line file system and media management forensic \
-	analysis tools. The file system tools allow you to examine file systems of \
-	a suspect computer in a non-intrusive fashion. Because the tools do not \
-	rely on the operating system to process the file systems, deleted and \
-	hidden content is shown. \
-	The media management tools allow you to examine the layout of disks and \
-	other media. The Sleuth Kit supports DOS partitions, BSD partitions (disk \
-	labels), Mac partitions, Sun slices (Volume Table of Contents), and GPT \
-	disks. With these tools, you can identify where partitions are located and \
-	extract them so that they can be analyzed with file system analysis tools.
-master_sites    sourceforge
-homepage        http://www.sleuthkit.org/sleuthkit/
+name                sleuthkit
+version             3.0.1
+revision            1
+
+categories          sysutils
+maintainers         nomaintainer
+platforms           darwin
+description         Forensic toolkit
+long_description    The Sleuth Kit (previously known as TASK) is a collection \
+    of UNIX-based command line file system and media management forensic \
+    analysis tools. The file system tools allow you to examine file systems of \
+    a suspect computer in a non-intrusive fashion. Because the tools do not \
+    rely on the operating system to process the file systems, deleted and \
+    hidden content is shown. \
+    The media management tools allow you to examine the layout of disks and \
+    other media. The Sleuth Kit supports DOS partitions, BSD partitions (disk \
+    labels), Mac partitions, Sun slices (Volume Table of Contents), and GPT \
+    disks. With these tools, you can identify where partitions are located and \
+    extract them so that they can be analyzed with file system analysis tools.
+master_sites        sourceforge
+homepage            http://www.sleuthkit.org/sleuthkit/
+
 checksums           md5     55956dd3bbfa6c9e2ebcc685c2a9569d \
                     sha1    a578d02c026ccb4389fd463445d9e7d329aeeaf9 \
                     rmd160  966613ef87a5523134b2d6482ee834fffb98b1ee
 
-depends_build   port:file port:perl5
-depends_lib     port:openssl port:p5-datemanip port:zlib
+depends_build       port:file \
+                    port:perl5
+depends_lib         port:openssl \
+                    port:p5-datemanip \
+                    port:zlib
 
 configure.args      --mandir=${prefix}/share/man
