sleuthkit: update to version 3.1.3. Add maintainer. (#26504)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71586 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/sleuthkit/Portfile
+++ b/dports/sysutils/sleuthkit/Portfile
@@ -4,11 +4,10 @@
 PortSystem          1.0
 
 name                sleuthkit
-version             3.0.1
-revision            1
+version             3.1.3
 
 categories          sysutils
-maintainers         nomaintainer
+maintainers         gmail.com:jessekornblum
 platforms           darwin
 description         Forensic toolkit
 long_description    The Sleuth Kit (previously known as TASK) is a collection \
@@ -25,9 +24,9 @@ long_description    The Sleuth Kit (previously known as TASK) is a collection \
 master_sites        sourceforge
 homepage            http://www.sleuthkit.org/sleuthkit/
 
-checksums           md5     55956dd3bbfa6c9e2ebcc685c2a9569d \
-                    sha1    a578d02c026ccb4389fd463445d9e7d329aeeaf9 \
-                    rmd160  966613ef87a5523134b2d6482ee834fffb98b1ee
+checksums           md5     e1798bede2112ec4c5770151c3e32bfd \
+                    sha1    27b592b1e544dbb86caab0e2358742b3aab05ff6 \
+                    rmd160  457e69bb802eef89488bf1b3eaf2d9e49028f71c
 
 depends_build       port:file \
                     port:perl5
