php5, php5-devel: remove built-in ldap support; this is now in the separate php5-ldap port; see #20492 and #19091
git-svn-id: https://svn.macports.org/repository/macports/trunk@71588 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/lang/php5-devel/Portfile
+++ b/dports/lang/php5-devel/Portfile
@@ -7,6 +7,7 @@ name                    php5-devel
 conflicts               php5 php52
 epoch                   1
 version                 5.3.3RC3
+revision                1
 set major               [lindex [split ${version} .] 0]
 set my_name             php${major}
 dist_subdir             ${my_name}
@@ -102,11 +103,6 @@ configure.universal_args-delete --disable-dependency-tracking
 platform darwin 10 {
     configure.env-append \
         LIBS=-lresolv
-}
-
-platform macosx {
-    configure.args-append \
-        --with-ldap=/usr
 }
 
 variant no_web conflicts apache apache2 fastcgi description {Don't include any web server support} {}
