frei0r-plugins: remove autoconf and libtool dependencies no longer needed; see #26478
git-svn-id: https://svn.macports.org/repository/macports/trunk@71589 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/frei0r-plugins/Portfile
+++ b/dports/multimedia/frei0r-plugins/Portfile
@@ -26,9 +26,7 @@ checksums           md5     7af2a36c33af2cd3dbd28e3ac79a3645 \
 depends_lib         port:gavl \
                     port:opencv
 
-depends_build       port:pkgconfig \
-                    port:autoconf \
-                    port:libtool
+depends_build       port:pkgconfig
 
 # opencv is not universal
 universal_variant   no
