frei0r-plugins: fix livecheck; see #26478
git-svn-id: https://svn.macports.org/repository/macports/trunk@71590 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/frei0r-plugins/Portfile
+++ b/dports/multimedia/frei0r-plugins/Portfile
@@ -31,5 +31,6 @@ depends_build       port:pkgconfig
 # opencv is not universal
 universal_variant   no
 
-#disable livecheck since fetching from git now
-livecheck.type      none
+livecheck.type      regex
+livecheck.url       [lindex ${master_sites} 0]
+livecheck.regex     ${name}-(\[0-9.\]+)${extract.suffix}
