frei0r-plugins: add archive location to master_sites; see #26478
git-svn-id: https://svn.macports.org/repository/macports/trunk@71591 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/frei0r-plugins/Portfile
+++ b/dports/multimedia/frei0r-plugins/Portfile
@@ -16,7 +16,9 @@ long_description    frei0r is a minimalistic plugin API for video sources and fi
                     all kinds of video applications.
 
 homepage            http://www.piksel.org/frei0r
-master_sites        http://www.piksel.no/frei0r/
+master_sites        http://www.piksel.no/frei0r/ \
+                    http://www.piksel.no/frei0r/archive/
+
 platforms           darwin
 
 checksums           md5     7af2a36c33af2cd3dbd28e3ac79a3645 \
