ices0: use port:-style dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@71593 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/ices0/Portfile
+++ b/dports/audio/ices0/Portfile
@@ -15,10 +15,11 @@ master_sites     http://downloads.us.xiph.org/releases/ices/
 distname         ices-${version}
 checksums        md5 d31450c4011561dae0229f071cb41cb6
 
-depends_build    bin:pkg-config:pkgconfig
+depends_build    port:pkgconfig
+
 depends_lib      port:libxml2 \
-                 lib:libmp3lame.0:lame \
-                 lib:libshout.3:libshout2
+                 port:lame \
+                 port:libshout2
 
 configure.args   --program-suffix=0 \
                  --with-docdir=${prefix}/share/doc \
