ices2: use port:-style dependencies
git-svn-id: https://svn.macports.org/repository/macports/trunk@71594 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/audio/ices2/Portfile
+++ b/dports/audio/ices2/Portfile
@@ -19,8 +19,10 @@ distname         ices-${version}
 checksums        sha1 045e8419c494d77162668e8362b3c9ddc4b4974c
 use_bzip2        yes
 
-depends_build    bin:pkg-config:pkgconfig
-depends_lib      lib:libshout:libshout2 port:libxml2
+depends_build    port:pkgconfig
+
+depends_lib      port:libxml2 \
+                 port:libshout2
 
 post-configure {
 	reinplace "s|VORBIS_CFLAGS = -I${prefix}/include|VORBIS_CFLAGS = -I${prefix}/include -D_MACOSX_ |g" ${worksrcpath}/Makefile
