SSHKeychain: override xcodeproj's arch, SDK and deployment target settings, fixing build on Snow Leopard; see #23149
git-svn-id: https://svn.macports.org/repository/macports/trunk@71595 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/SSHKeychain/Portfile
+++ b/dports/aqua/SSHKeychain/Portfile
@@ -8,6 +8,7 @@ PortGroup     xcode 1.0
 
 name          SSHKeychain
 version       0.8.2
+revision      1
 categories    aqua sysutils
 maintainers   nomaintainer
 description   SSHKeychain is a graphical front-end to ssh-add
@@ -33,21 +34,10 @@ patchfiles    patch-SSHKeychain_xcodeproj__project_pbxproj.diff
 worksrcdir    ${version}
 xcode.target  ${name}
 
-# Dummy configure to enable +universal.
-use_configure yes
-configure     {}
-
-# Determine for what architecture to build
-# (if +universal, the project already does the right thing...)
-if {! [variant_isset universal]} {
-    set arch ${os.arch}
-    if {! [string compare ${os.arch} powerpc]} {
-        set arch ppc
-    }
-
-    xcode.build.settings-append     ARCHS=${arch}
-    xcode.destroot.settings-append  ARCHS=${arch}
-}
+# The Deployment configuration sets archs, SDKs and deployment targets,
+# none of which we want, so use the Default configuration which doesn't
+# do any of that and let xcode portgroup variables take effect.
+xcode.configuration Default
 
 post-destroot {
     fs-traverse dir ${destroot} {
