libgweather: add missing dependency, not universal, closes #26508.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71596 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/net/libgweather/Portfile
+++ b/dports/net/libgweather/Portfile
@@ -5,6 +5,7 @@ PortSystem      1.0
 
 name            libgweather
 version         2.30.2
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 maintainers     devans openmaintainer
 categories      net gnome
@@ -31,7 +32,7 @@ depends_build   port:pkgconfig \
 
 depends_lib     port:gconf \
                 port:libsoup \
-                port:py26-gobject
+                port:py26-gtk
 
 patchfiles      patch-python-prefix.diff
 
@@ -49,6 +50,11 @@ configure.pkg_config_path ${python_framework}/lib/pkgconfig
 #
 
 build.env       PATH=${python_framework}/bin:$env(PATH)
+
+#
+# py26-gtk -> py26-cairo -> py26-numpy -> atlas is not universal
+
+universal_variant no
 
 post-activate {
     system "\
