latex-mk: fix livecheck; see #24524
git-svn-id: https://svn.macports.org/repository/macports/trunk@71597 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/latex-mk/Portfile
+++ b/dports/print/latex-mk/Portfile
@@ -21,3 +21,7 @@ Latex-Mk is a set of makefile fragments and shell scripts designed to \
 assist in the management of LaTeX documents.  The user creates a \
 simple Makefile which sets up a few simple variables and then includes \
 the latex.mk fragment at the end.
+
+livecheck.type      regex
+livecheck.url       http://sourceforge.net/projects/${name}/files/
+livecheck.regex     /${name}-(\[0-9.\]+)${extract.suffix}
