latex-mk: update to 2.0 and add "supported_archs noarch"; see #24524
git-svn-id: https://svn.macports.org/repository/macports/trunk@71598 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/print/latex-mk/Portfile
+++ b/dports/print/latex-mk/Portfile
@@ -3,15 +3,19 @@
 PortSystem 1.0
 
 name		latex-mk
-version		1.9.1
+version             2.0
 categories	print
 maintainers	rossbeyer.net:rbeyer openmaintainer
 description	makefile fragments and shell scripts to manage LaTeX documents
 homepage	http://latex-mk.sourceforge.net/
 platforms   darwin
+supported_archs     noarch
+
 master_sites	sourceforge
-checksums	md5 18abe88ce572a525c05d249a27749cc1 \
-            sha1 c8e67d1063da5557b6c25b553378ac29b7347219
+
+checksums           md5     88307abfefec86bdf51fcacd47374586 \
+                    sha1    e7bc1a422a88525332d275b40fc1516861bce91a
+
 depends_lib	bin:latex:texlive
 
 configure.args	--infodir=${prefix}/share/info
