--- a/dports/python/py26-gobject/Portfile
+++ b/dports/python/py26-gobject/Portfile
@@ -6,8 +6,7 @@ PortSystem      1.0
 name            py26-gobject
 platforms       darwin
 set my_name     pygobject
-version         2.21.3
-revision        1
+version         2.21.5
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      python gnome
 maintainers     mcalhoun openmaintainer
@@ -25,9 +24,9 @@ master_sites    gnome:sources/${my_name}/${branch}/
 distname        ${my_name}-${version}
 use_bzip2       yes
 
-checksums       md5     6449457fba101ae875c8e30691535046 \
-                sha1    5630a0cdef2db48d5e8cbdd5cdb822684ebf7fa3 \
-                rmd160  607f71a9b07679c9c4326a4b9edf7bbe885e0b5e
+checksums       md5     77ad7e8dbf13188364c9f56f907e530a \
+                sha1    8017d5dba28278727501194d45310d3156937c70 \
+                rmd160  f1341e01cfd14399ba6b4a5dad8638da67d8de9d
 
 depends_build   port:pkgconfig
 depends_lib     path:${prefix}/lib/pkgconfig/glib-2.0.pc:glib2 \
@@ -42,7 +41,8 @@ set python_prefix ${frameworks_dir}/Python.framework/Versions/2.6
 configure.pre_args-delete  --prefix=${prefix}
 configure.pre_args-append  --prefix=${python_prefix}
 configure.args-append \
-    --includedir=${python_prefix}/include/python2.6
+    --includedir=${python_prefix}/include/python2.6 \
+    --disable-introspection
 
 configure.python    ${prefix}/bin/python2.6
 
