--- a/dports/python/py27-gobject/Portfile
+++ b/dports/python/py27-gobject/Portfile
@@ -6,7 +6,7 @@ PortSystem      1.0
 name            py27-gobject
 platforms       darwin
 set my_name     pygobject
-version         2.18.0
+version         2.21.5
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      python gnome
 maintainers     mcalhoun jwa openmaintainer
@@ -24,9 +24,9 @@ master_sites    gnome:sources/${my_name}/${branch}/
 distname        ${my_name}-${version}
 use_bzip2       yes
 
-checksums       md5     522b813219a6ad14b85b25d953b08727 \
-                sha1    f800eda7978fe9813600cfdda973da15c3178bb0 \
-                rmd160  db454107949b0e797c6c151aa426368ef0f59317
+checksums       md5     77ad7e8dbf13188364c9f56f907e530a \
+                sha1    8017d5dba28278727501194d45310d3156937c70 \
+                rmd160  f1341e01cfd14399ba6b4a5dad8638da67d8de9d
 
 depends_build   port:pkgconfig
 depends_lib     path:${prefix}/lib/pkgconfig/glib-2.0.pc:glib2 \
@@ -41,7 +41,8 @@ set python_prefix ${frameworks_dir}/Python.framework/Versions/2.7
 configure.pre_args-delete  --prefix=${prefix}
 configure.pre_args-append  --prefix=${python_prefix}
 configure.args-append \
-    --includedir=${python_prefix}/include/python2.7
+    --includedir=${python_prefix}/include/python2.7 \
+    --disable-introspection
 
 configure.python    ${prefix}/bin/python2.7
 
