--- a/dports/multimedia/avidemux/Portfile
+++ b/dports/multimedia/avidemux/Portfile
@@ -39,6 +39,7 @@ patchfiles          patch-mangle-asm.diff \
                     patch-cmake-use-sdl.diff \
                     patch-build-plugins.diff \
                     patch-ffmpeg-libs-naming.diff \
+                    patch-ffmpeg-compiler.diff \
                     patch-no-bundles.diff
 
 # do a out of place build
