--- a/dports/python/py27-gobject/Portfile
+++ b/dports/python/py27-gobject/Portfile
@@ -7,6 +7,7 @@ name            py27-gobject
 platforms       darwin
 set my_name     pygobject
 version         2.21.5
+revision        1
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      python gnome
 maintainers     mcalhoun jwa openmaintainer
@@ -53,6 +54,9 @@ post-destroot {
         ${destroot}${docdir}
     xinstall -d ${destroot}${prefix}/share/gtk-doc/html
     system "ln -s ${python_prefix}/share/${my_name} ${destroot}${prefix}/share/${my_name}27"
+# devhelp requires gtk-doc/html directory name  and .devhelp file name (less the .devhelp) to match
+    file rename ${destroot}${python_prefix}/share/gtk-doc/html/${my_name}/${my_name}.devhelp \
+                ${destroot}${python_prefix}/share/gtk-doc/html/${my_name}/${my_name}27.devhelp 
     system "ln -s ${python_prefix}/share/gtk-doc/html/${my_name} ${destroot}${prefix}/share/gtk-doc/html/${my_name}27"
 }
 
