fvwm2: typo, required variants are not 'set'.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71605 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/x11/fvwm2/Portfile
+++ b/dports/x11/fvwm2/Portfile
@@ -26,7 +26,7 @@ depends_build       port:pkgconfig \
 
 depends_lib         port:xorg-libsm \
                     port:xorg-libXinerama \
-                    port:xorg-libXcursor\
+                    port:xorg-libXcursor \
                     port:xpm \
                     port:Xft2 \
                     port:libpng \
@@ -48,7 +48,7 @@ autoreconf.args     -fv
 
 # port:gtk1 is not universal
 
-if {[variant_isset gtk]} {
+if {[variant_isset gtk] || [variant_isset gnome]} {
         universal_variant   no
 }
 
