Add ccache_dir and ccache_size to macports.conf and man page.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71606 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/base/doc/macports.conf.in
+++ b/base/doc/macports.conf.in
@@ -64,6 +64,13 @@ universal_archs		@UNIVERSAL_ARCHS@
 # Use ccache (C/C++ compiler cache) - see http://ccache.samba.org/
 #configureccache		no
 
+# Location where ccache stores its files
+#ccache_dir			@localstatedir_expanded@/macports/build/.ccache
+
+# Maximum size ccache may use.
+# Use 'G', 'M', or 'K' suffix for giga-, mega- or kilobytes.
+#ccache_size			2G
+
 # Use distcc (distributed compiler) - see http://distcc.samba.org/
 #configuredistcc		no
 
