--- a/dports/aqua/CronniX/Portfile
+++ b/dports/aqua/CronniX/Portfile
@@ -9,7 +9,7 @@ version                 3.0.2
 categories              aqua
 maintainers             ryandesign
 license                 GPLv3
-homepage                http://www.abstracture.de/cronnix
+homepage                http://code.google.com/p/cronnix/
 xcode.target            ${name}
 
 fetch.type              svn
