Use supported_archs to force a 32-bit build instead of manually manipulating build_arch; see #26503
git-svn-id: https://svn.macports.org/repository/macports/trunk@71610 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/aqua/CosmicDebris/Portfile
+++ b/dports/aqua/CosmicDebris/Portfile
@@ -26,11 +26,7 @@ distname		${name}Source
 use_zip			yes
 
 # current version uses NSMailDelivery which is not available in 64-bit
-if {$build_arch == "x86_64"} {
-    configure.build_arch i386
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-}
+supported_archs		i386 ppc
 if {[variant_isset universal] && [string match *64* $universal_archs]} {
     pre-fetch {
         return -code error "$name $version cannot be built for 64-bit architectures"
