--- a/dports/aqua/TeXShop/Portfile
+++ b/dports/aqua/TeXShop/Portfile
@@ -27,11 +27,7 @@ checksums           sha1    1472dc9be25c586f8069ebbe3a1c9dd1b1a30aa7 \
                     rmd160  e353a5c3213c2a8727a26f3f4664452db91907e0
 
 # force 32-bit, ticket #20291
-if {$build_arch == "x86_64"} {
-    configure.build_arch i386
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-}
+supported_archs i386 ppc
 post-extract    {
     reinplace "s/defaultConfigurationName = Debug/defaultConfigurationName = Release/" ${worksrcpath}/${name}.xcodeproj/project.pbxproj
     
