--- a/dports/aqua/fltk/Portfile
+++ b/dports/aqua/fltk/Portfile
@@ -49,13 +49,8 @@ configure.args  --enable-threads \
                 --mandir=${prefix}/share/man
 
 # Force 32-bit (#21054)
-if {${build_arch} == "x86_64"} {
-    configure.build_arch i386
-    configure.args-append   --with-archflags="-arch i386"
-} elseif {${build_arch} == "ppc64"} {
-    configure.build_arch ppc
-    configure.args-append   --with-archflags="-arch ppc"
-}
+supported_archs i386 ppc
+configure.args-append   --with-archflags="-arch ${configure.build_arch}"
 
 use_parallel_build  yes
 
