--- a/dports/aqua/pgAdmin3/Portfile
+++ b/dports/aqua/pgAdmin3/Portfile
@@ -47,14 +47,8 @@ configure.args	--with-pgsql=${prefix}/lib/postgresql84 \
 use_parallel_build	no
 build.target	all install
 
-if {$build_arch == "x86_64"} {
-    configure.build_arch i386
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-}
-if {![info exists configure.ld_archflags]} {
-    eval configure.ldflags-append ${configure.cc_archflags}
-}
+supported_archs	i386 ppc
+
 # wxWidgets is not universal
 universal_variant no
 
