--- a/dports/devel/allegro/Portfile
+++ b/dports/devel/allegro/Portfile
@@ -30,11 +30,9 @@ post-destroot {
     }
 }
 
-platform darwin 10 {
-    # Does not compile 64-bit due to NSQuickDraw
-    # and probably other old API usage
-    configure.build_arch i386
-}
+# Does not compile 64-bit due to NSQuickDraw
+# and probably other old API usage
+supported_archs i386 ppc
 
 livecheck.type  regex
 livecheck.url   http://alleg.sourceforge.net/wip.html
