--- a/dports/devel/xulrunner-devel/Portfile
+++ b/dports/devel/xulrunner-devel/Portfile
@@ -122,11 +122,7 @@ configure.args \
 # xpctools and necko-wifi broke in 3.6b1
 
 # Force 32-bit, inline-asm
-if {$build_arch == "x86_64"} {
-    configure.build_arch i386   
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-}
+supported_archs i386 ppc
 
 variant debug description {build with debugging symbols} {
     configure.args-delete   --disable-debug \
