--- a/dports/emulators/dosbox/Portfile
+++ b/dports/emulators/dosbox/Portfile
@@ -54,11 +54,7 @@ post-destroot {
         ${destroot}${prefix}/share/doc/${name}
 }
 
-if {${build_arch} == "x86_64"} {
-    configure.build_arch i386
-} elseif {${build_arch} == "ppc64"} {
-    configure.build_arch ppc
-}
+supported_archs     i386 ppc
 
 platform darwin {
     configure.args-append --build=${configure.build_arch}-apple-darwin${os.major}
