--- a/dports/games/liquidwar/Portfile
+++ b/dports/games/liquidwar/Portfile
@@ -33,12 +33,8 @@ patch {
     reinplace -E "s|^DATADIR =(.*)$|DATADIR = \$(datadir)/liquidwar|" ${worksrcpath}/src/Makefile.in
 }
 
-if {$build_arch == "x86_64"} {
-    # Allegro does not compile 64-bit due to NS* stuff, so we have to do i386
-    configure.build_arch i386
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-}
+# Allegro does not compile 64-bit due to NS* stuff, so we have to do 32-bit
+supported_archs i386 ppc
 
 configure.cflags-append     -DALLEGRO_UNIX
 configure.args-append       --disable-target-opt --disable-asm
