--- a/dports/graphics/wxWidgets-python/Portfile
+++ b/dports/graphics/wxWidgets-python/Portfile
@@ -83,20 +83,13 @@ universal_variant   no
 use_parallel_build  no
 
 variant carbon conflicts gtk description {use carbon} {
+    supported_archs i386 ppc
     configure.args-append --with-mac
-    if {$build_arch == "x86_64"} {
-        configure.build_arch i386
-        configure.cflags-append -arch i386
-        configure.ldflags-append -arch i386
-        configure.cxxflags-append -arch i386
-        configure.cppflags-append -arch i386
-        configure.objcflags-append -arch i386
-    } elseif {$build_arch == "ppc64"} {
-        configure.build_arch ppc
-    }
-    if {![info exists configure.ld_archflags]} {
-        eval configure.ldflags-append ${configure.cc_archflags}
-    }
+    configure.cflags-append -arch ${configure.build_arch}
+    configure.ldflags-append -arch ${configure.build_arch}
+    configure.cxxflags-append -arch ${configure.build_arch}
+    configure.cppflags-append -arch ${configure.build_arch}
+    configure.objcflags-append -arch ${configure.build_arch}
 }
 variant gtk conflicts carbon description {use gtk} {
     depends_lib-append    port:gtk2
