--- a/dports/graphics/wxWidgets/Portfile
+++ b/dports/graphics/wxWidgets/Portfile
@@ -81,15 +81,8 @@ build.target
 universal_variant	no
 use_parallel_build no
 
-if {$build_arch == "x86_64"} {
-    configure.build_arch i386
-    configure.cppflags-append -arch i386
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-}
-if {![info exists configure.ld_archflags]} {
-    eval configure.ldflags-append ${configure.cc_archflags}
-}
+supported_archs	i386 ppc
+configure.cppflags-append -arch ${configure.build_arch}
 
 post-build {
     foreach c { ${contrib} } {
