--- a/dports/lang/scsh/Portfile
+++ b/dports/lang/scsh/Portfile
@@ -23,11 +23,4 @@ configure.args	--mandir=${prefix}/share/man
 build.target    enough
 
 # Force 32-bit build
-switch ${build_arch} {
-    x86_64 {
-        configure.build_arch i386
-    }
-    ppc64 {
-        configure.build_arch ppc
-    }
-}
+supported_archs i386 ppc
