--- a/dports/science/playerstage-stage/Portfile
+++ b/dports/science/playerstage-stage/Portfile
@@ -43,11 +43,7 @@ archcheck.files         lib/libfltk.a \
 
 # fltk is 32-bit only.
 universal_variant       no
-if {${build_arch} == "x86_64"} {
-    configure.build_arch i386
-} elseif {${build_arch} == "ppc64"} {
-    configure.build_arch ppc
-}
+supported_archs         i386 ppc
 
 post-build {
     reinplace "s|${configure.cc_archflags}||g" ${worksrcpath}/stage.pc
