--- a/dports/sysutils/osxutils/Portfile
+++ b/dports/sysutils/osxutils/Portfile
@@ -37,11 +37,7 @@ post-patch {
 }
 
 # all but one of these tools use 32-bit-only carbon bits
-if {$build_arch == "x86_64"} {
-    configure.build_arch i386
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-}
+supported_archs	i386 ppc
 
 set bt {getfcomment geticon hfsdata lsmac mkalias setfcomment setfctypes setfflags seticon setlabel setsuffix wsupdate}
 
