--- a/dports/sysutils/synergy/Portfile
+++ b/dports/sysutils/synergy/Portfile
@@ -43,8 +43,4 @@ livecheck.name	${sf_proj}
 livecheck.regex	<title>Sources (.*) released.*</title>
 
 # Force 32-bit, all kinds of Carbon cruft in here. (#20908)
-if {$build_arch == "x86_64"} {
-    configure.build_arch i386
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-}
+supported_archs	i386 ppc
