--- a/dports/www/firefox-x11/Portfile
+++ b/dports/www/firefox-x11/Portfile
@@ -112,27 +112,11 @@ configure.args \
 # xpctools and necko-wifi broke in 3.6b1
 
 # Force 32-bit, inline-asm
-if {$build_arch == "x86_64"} {
-    configure.build_arch i386
-
-    # Yes, this is ugly... but the real fix is in the works
-    # https://bugzilla.mozilla.org/show_bug.cgi?id=529878
-    configure.cc ${configure.cc} -arch i386
-    configure.cxx ${configure.cxx} -arch i386
-
-    # Take this out when we ship >1.8.1
-    configure.ldflags-append -arch i386
-} elseif {$build_arch == "ppc64"} {
-    configure.build_arch ppc
-
-    # Yes, this is ugly... but the real fix is in the works
-    # https://bugzilla.mozilla.org/show_bug.cgi?id=529878
-    configure.cc ${configure.cc} -arch ppc
-    configure.cxx ${configure.cxx} -arch ppc
-
-    # Take this out when we ship >1.8.1
-    configure.ldflags-append -arch ppc
-}
+supported_archs i386 ppc
+# Yes, this is ugly... but the real fix is in the works
+# https://bugzilla.mozilla.org/show_bug.cgi?id=529878
+configure.cc ${configure.cc} -arch ${configure.build_arch}
+configure.cxx ${configure.cxx} -arch ${configure.build_arch}
 
 variant debug description {build with debugging symbols} {
     configure.args-delete   --disable-debug \
