synergy: add missing homepage variable
git-svn-id: https://svn.macports.org/repository/macports/trunk@71611 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/synergy/Portfile
+++ b/dports/sysutils/synergy/Portfile
@@ -14,6 +14,8 @@ long_description	Synergy lets you easily share a single mouse and keyboard \
 				without special hardware. It is intended for users with \
 				multiple computers on their desk since each system uses its \
 				own display.
+
+homepage		http://synergy-foss.org/
 master_sites	sourceforge
 master_sites.mirror_subdir	${sf_proj}
 
