transcode: enable libmpeg2 libmpeg2convert, patch contributed by danielb@..., closes #26515.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71612 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/transcode/Portfile
+++ b/dports/multimedia/transcode/Portfile
@@ -5,6 +5,7 @@ PortSystem 1.0
 
 name        transcode
 version     1.1.5
+revision    1
 epoch       1
 categories  multimedia
 maintainers cogweb.net:lionteeth devans
@@ -58,7 +59,10 @@ autoreconf.args --force
 configure.args  --disable-mmx \
                 --with-libavcodec-prefix=${prefix} \
                 --with-libavformat-prefix=${prefix} \
+                --enable-libmpeg2 \
                 --with-libmpeg2-prefix=${prefix} \
+                --enable-libmpeg2convert \
+                --with-libmpeg2convert-prefix=${prefix} \
                 --with-libdvdread-prefix=${prefix} \
                 --with-libjpeg-prefix=${prefix} \
                 --with-lame-prefix=${prefix}
