macfuse: needs to build as root (or it asks for a sudo password)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71615 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/fuse/macfuse/Portfile
+++ b/dports/fuse/macfuse/Portfile
@@ -73,6 +73,7 @@ post-patch {
     reinplace s,@@DESTPATH@@,${destpath},g ${worksrcpath}/macfuse_buildtool.sh
 }
 
+build.asroot    yes
 # macfuse_buildtool has been patched to install directly into ${destpath},
 # so destroot phase is unnecessary
 build {
