mutt-devel: fix gdbm and qdbm variants so they actually work; see #20663
git-svn-id: https://svn.macports.org/repository/macports/trunk@71616 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/mail/mutt-devel/Portfile
+++ b/dports/mail/mutt-devel/Portfile
@@ -4,7 +4,7 @@ PortSystem          1.0
 
 name                mutt-devel
 version             1.5.20
-revision            5
+revision            6
 categories          mail
 platforms           darwin
 maintainers         nomaintainer
@@ -91,12 +91,12 @@ variant headercache conflicts db4 description {Enable header caching (requires g
 
 variant qdbm conflicts db4 gdbm tokyocabinet description {Use QDBM database} {
     depends_lib-append      port:qdbm
-    configure.args-append   --enable-qdbm --without-bdb --without-gdbm --without-tokyocabinet
+    configure.args-append   --with-qdbm --without-bdb --without-gdbm --without-tokyocabinet
 }
 
 variant gdbm conflicts db4 qdbm tokyocabinet description {Use GNU dbm database} {
     depends_lib-append      port:gdbm
-    configure.args-append   --enable-gdbm --without-bdb --without-qdbm --without-tokyocabinet
+    configure.args-append   --with-gdbm --without-bdb --without-qdbm --without-tokyocabinet
 }
 
 variant db4 conflicts qdbm gdbm tokyocabinet description {Use Berkeley DB database} {
