--- a/dports/audio/ices0/Portfile
+++ b/dports/audio/ices0/Portfile
@@ -3,6 +3,7 @@
 PortSystem 1.0
 name             ices0
 version          0.4
+revision         1
 categories       audio net
 maintainers      nomaintainer
 description      Stream audio to an icecast server
@@ -17,12 +18,18 @@ checksums        md5 d31450c4011561dae0229f071cb41cb6
 
 depends_build    port:pkgconfig
 
-depends_lib      port:libxml2 \
+depends_lib      port:faad2 \
+                 port:flac \
                  port:lame \
-                 port:libshout2
+                 port:libshout2 \
+                 port:libxml2 \
+                 port:mp4v2
+
+patchfiles       patch-src-in_mp4.c.diff \
+                 patch-r13773.diff
 
 configure.args   --program-suffix=0 \
-                 --with-docdir=${prefix}/share/doc \
+                 --with-docdir=${prefix}/share/doc/${name} \
                  --mandir=${prefix}/share/man \
                  --without-python \
                  --without-perl
