--- a/dports/gnome/pessulus/Portfile
+++ b/dports/gnome/pessulus/Portfile
@@ -4,7 +4,7 @@
 PortSystem	1.0
 
 name		pessulus
-version		2.26.2
+version		2.30.3
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories	gnome python
 platforms	darwin
@@ -18,33 +18,34 @@ long_description	\
 homepage	http://www.gnome.org/~vuntz/pessulus/
 master_sites	gnome:sources/${name}/${branch}/
 
-checksums       md5     255ec0743714b6fc50da796f6bc95009 \
-                sha1    93bdd6884150c9ad88c2f997a48f6ec23aab2dea \
-                rmd160  cad567c52a00c95c430eba82f36d7e91b4fe9d96
+checksums       md5     8e9bc7f3dabbdba29f3218aeb7cc2233 \
+                sha1    f4dc60323469ef6caeee7da88a90740ac0272b10 \
+                rmd160  08ae9e7ed05913b69943676350997289c2db8cbf
 
 use_bzip2	yes
 
-depends_build	\
-        port:p5-xml-parser \
-	port:pkgconfig \
-        port:intltool
+depends_build	port:pkgconfig \
+                port:intltool
 
-depends_lib	\
-	port:gconf \
-	port:py25-gnome \
-        port:gnome-python-desktop
+depends_lib     port:gconf \
+	        port:py26-gtk \
+                port:gnome-python-desktop
 
-patchfiles      patch-data-Makefile.in.diff \
-                patch-Makefile.in.diff
+patchfiles      patch-configure.diff \
+                patch-Makefile.in.diff \
+                patch-data-Makefile.in.diff
 
-configure.python ${prefix}/bin/python2.5
+configure.python ${prefix}/bin/python2.6
+set python_prefix ${frameworks_dir}/Python.framework/Versions/2.6
+configure.pkg_config_path ${python_prefix}/lib/pkgconfig
 
 post-destroot {
     file rename ${destroot}${prefix}/bin/pessulus.py ${destroot}${prefix}/bin/pessulus
 }
 
 post-activate {
-   system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+    system "${prefix}/bin/gtk-update-icon-cache -f -t ${prefix}/share/icons/hicolor"
+    system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
         gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
 }
 
