--- a/dports/archivers/cabextract/Portfile
+++ b/dports/archivers/cabextract/Portfile
@@ -3,7 +3,7 @@
 PortSystem          1.0
 
 name                cabextract
-version             1.2
+version             1.3
 categories          archivers compression sysutils
 maintainers         boeyms openmaintainer
 description         Extract files from Microsoft cabinet files
@@ -17,16 +17,16 @@ platforms           darwin
 homepage            http://www.cabextract.org.uk/
 master_sites        ${homepage}
 
-checksums           md5 dc421a690648b503265c82ade84e143e \
-                    sha1 871b3db4bc2629eb5726659c147aecea1af6a6d0 \
-                    rmd160 55292e287047b14945e69b0be8ab9ff1d4902f71
+checksums           md5     cb9a4a38470d2a71a0275968e7eb64d3 \
+                    sha1    112469b9e58497a5cfa2ecb3d9eeb9d3a4151c9f \
+                    rmd160  a02fc161719d57cbee934f0a12ed5441ec7ddc27
 
 configure.args      --mandir=${prefix}/share/man
 
 use_parallel_build  yes
 
 post-destroot {
-    xinstall -d ${destroot}${prefix}/share/doc/${name}-${version}
+    xinstall -d ${destroot}${prefix}/share/doc/${name}
     xinstall -m 644 -W ${worksrcpath} AUTHORS COPYING ChangeLog NEWS \
-        README TODO ${destroot}${prefix}/share/doc/${name}-${version}
+        README TODO ${destroot}${prefix}/share/doc/${name}
 }
