dosmacux: don't use a versioned doc directory
git-svn-id: https://svn.macports.org/repository/macports/trunk@71622 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/textproc/dosmacux/Portfile
+++ b/dports/textproc/dosmacux/Portfile
@@ -5,6 +5,7 @@ PortSystem              1.0
 
 name                    dosmacux
 version                 1.5
+revision                1
 categories              textproc
 platforms               darwin
 maintainers             ryandesign
@@ -37,7 +38,7 @@ test.run                yes
 test.target             check
 
 post-destroot {
-    set docdir ${destroot}${prefix}/share/doc/${name}-${version}
+    set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir}
     xinstall -W ${worksrcpath} -m 0644 \
         AUTHORS \
