--- a/dports/mail/gnupg2/Portfile
+++ b/dports/mail/gnupg2/Portfile
@@ -4,8 +4,7 @@
 PortSystem      1.0
 
 name            gnupg2
-version         2.0.13
-revision        1
+version         2.0.16
 categories      mail security
 maintainers     waqar boeyms
 description     GNU pretty-good-privacy package
@@ -21,9 +20,9 @@ distname    gnupg-${version}
 master_sites    gnupg:gnupg
 
 use_bzip2       yes
-checksums   md5     41bd7629d815b90c15b37bb31c2f07c0 \
-            sha1    2ff42aff14cdddafc291d44ac1968af5f09a9d4d \
-            rmd160  a2291f4d5923b50bca980b726e2fe0c31c2589a9
+checksums   md5     88a4d46deca63d2eca29b2b611304afb\
+            sha1    e7eb4f60026884bd90803b531472bc518804b95d\
+            rmd160  3a0ed7a3ebb28fdb875533ff3368f6af3a0bb742
 
 post-patch {
     reinplace "s|/var|${prefix}/var|" \
@@ -50,7 +49,8 @@ depends_lib     port:libiconv           \
                 port:curl               \
                 port:libusb-compat
 
-patchfiles      patch-configure.diff
+patchfiles      patch-configure.diff \
+                patch-tests__openpgp__Makefile.in.diff
 
 post-destroot {
         delete ${destroot}${prefix}/share/man/man1/gpg-zip.1
