lmms: don't clobber cmake dep (#26519)
git-svn-id: https://svn.macports.org/repository/macports/trunk@71628 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/lmms/Portfile
+++ b/dports/multimedia/lmms/Portfile
@@ -22,7 +22,7 @@ checksums           md5     8573b8376808c77c058cca3a57a36d8d \
                     sha1    851021270157d3eda15c6b6dae8a71ab47db24cd \
                     rmd160  8319667b7c65dc4b14022ebe2d76b39e11703f1f
 
-depends_build       port:pkgconfig
+depends_build-append port:pkgconfig
 depends_lib         port:libsndfile \
                     port:qt4-mac \
                     path:lib/pkgconfig/sdl.pc:libsdl \
