gnumeric: update to version 1.10.10, configuration.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71631 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/gnome/gnumeric/Portfile
+++ b/dports/gnome/gnumeric/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gnumeric
-version		1.10.9
+version		1.10.10
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	A spreadsheet with gnome support.
 long_description	${description}
@@ -16,9 +16,9 @@ homepage	http://projects.gnome.org/gnumeric/
 master_sites    gnome:sources/${name}/${branch}/
 use_bzip2	yes
 
-checksums       md5     827343c8cb76862df5bfaecef2687d26 \
-                sha1    84d09704d73ba41a7d5df430169d1cde04c394b8 \
-                rmd160  21e31ed561ae587f230f9007949754eeefa13b43
+checksums       md5     4d0150896ecca3d16f2fea3a2414df40 \
+                sha1    7f35f4575f97d7c63800c45544456f775d8e3a1e \
+                rmd160  b894e7f0c82e97e47761af4edfbbd3e566193e6f
 
 depends_build	port:gnome-doc-utils
 
@@ -27,7 +27,10 @@ depends_lib	port:goffice \
                 port:py26-gobject
 
 
-configure.args  --disable-schemas-install
+configure.args  --disable-schemas-install \
+                --without-gda \
+                --without-paradox \
+                --without-psiconv
 
 configure.python ${prefix}/bin/python2.6
 set python_framework ${frameworks_dir}/Python.framework/Versions/2.6
