sysutils/afsctool: Add livecheck
git-svn-id: https://svn.macports.org/repository/macports/trunk@71632 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/afsctool/Portfile
+++ b/dports/sysutils/afsctool/Portfile
@@ -51,3 +51,7 @@ destroot {
     xinstall -d -m 755 ${destroot}${prefix}/share/doc/${name}
     xinstall -W ${worksrcpath} -m 644 License.txt ${destroot}${prefix}/share/doc/${name}
 }
+
+livecheck.type regex
+livecheck.url http://web.me.com/brkirch/brkirchs_Software/afsctool/rss.xml
+livecheck.regex ${name}\\s+(\\d+(?:\\.\\d+)+)
