--- a/dports/x11/gtk-nodoka-engine/Portfile
+++ b/dports/x11/gtk-nodoka-engine/Portfile
@@ -4,7 +4,7 @@
 PortSystem 1.0
 
 name		gtk-nodoka-engine
-version		0.7.2
+version		0.7.5
 description	Nodoka GTK2 Theme Engine
 long_description \
     A theme that is nice, not attracting too much attention to itself, \
@@ -17,12 +17,12 @@ homepage	http://fedoraproject.org/wiki/Artwork/NodokaTheme
 
 master_sites    https://fedorahosted.org/releases/n/o/nodoka/
 
-checksums       md5     0d9531719fe4e66e3c3b0311eb298126 \
-                sha1    7bc8c778cfb76717a2881b7524daa4a7acf3a16b \
-                rmd160  d22899ed36a795e1aa0482a68205063df1695614
+checksums       md5     22227adf29231ba2b87202ac3522e70f \
+                sha1    edf9baacc22bfade02b01d45e80237e890f023e3 \
+                rmd160  ea837815c87a4a3a5c6e8476e31a5901733a720b
 
-depends_lib     lib:libgtk.2:gtk2
-depends_build   bin:ginstall:coreutils
+depends_build   port:coreutils
+depends_lib     port:gtk2
 
 post-patch {
     reinplace "s|/usr/bin/install|${prefix}/bin/ginstall|g" \
