multimedia/avidemux: Add ffmpeg include directories first to avoid conflicts with ffmpeg port, comment:ticket:26413:5
git-svn-id: https://svn.macports.org/repository/macports/trunk@71635 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/avidemux/Portfile
+++ b/dports/multimedia/avidemux/Portfile
@@ -5,6 +5,7 @@ PortGroup           cmake 1.0
 
 name                avidemux
 version             2.5.3
+revision            1
 categories          multimedia
 platforms           darwin
 maintainers         nomaintainer
@@ -61,6 +62,10 @@ configure.args-append \
                     -DUSE_SYSTEM_SPIDERMONKEY=ON \
                     -DSPIDERMONKEY_INCLUDE_DIR=${prefix}/include/js \
                     -DSPIDERMONKEY_LIBRARY_DIR=${prefix}/lib/libjs.dylib
+
+# Prevent ffmpeg in ${prefix} to be searched before bundled ffmpeg
+configure.args-append \
+                    -DCMAKE_INCLUDE_DIRECTORIES_BEFORE=ON
 
 # SDL uses Quickdraw API, fails on 64-bit
 # Xvideo is disabled for OS X, but probably could work
