multimedia/avidemux: Disable docs generation for bundled ffmpeg to avoid #25803 and texi2html dependency.
git-svn-id: https://svn.macports.org/repository/macports/trunk@71636 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/multimedia/avidemux/Portfile
+++ b/dports/multimedia/avidemux/Portfile
@@ -5,7 +5,7 @@ PortGroup           cmake 1.0
 
 name                avidemux
 version             2.5.3
-revision            1
+revision            2
 categories          multimedia
 platforms           darwin
 maintainers         nomaintainer
@@ -40,7 +40,7 @@ patchfiles          patch-mangle-asm.diff \
                     patch-cmake-use-sdl.diff \
                     patch-build-plugins.diff \
                     patch-ffmpeg-libs-naming.diff \
-                    patch-ffmpeg-compiler.diff \
+                    patch-ffmpeg-configure.diff \
                     patch-no-bundles.diff
 
 # do a out of place build
