Added startupitem definition for launchd to auto-load beanstalkd on startup. Closes #26521
git-svn-id: https://svn.macports.org/repository/macports/trunk@71637 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/sysutils/beanstalkd/Portfile
+++ b/dports/sysutils/beanstalkd/Portfile
@@ -4,7 +4,7 @@ PortSystem 1.0
 
 name			beanstalkd
 version			1.4.6
-revision		0
+revision		1
 description		a fast, distributed, in-memory workqueue service
 long_description	\
 	beanstalkd is a fast, distributed, in-memory workqueue service. \
@@ -26,3 +26,17 @@ depends_lib		port:libevent \
 configure.args      --prefix=${prefix} \
                     --with-event=${prefix}
 
+startupitem.create      yes
+startupitem.executable  ${prefix}/bin/beanstalkd -u nobody
+
+post-activate {
+    ui_msg "###########################################################"
+    ui_msg "# To launch beanstalkd manually, run:"
+    ui_msg "# "
+    ui_msg "# sudo launchctl load -w /Library/LaunchDaemons/org.macports.beanstalkd.plist"
+    ui_msg "# "
+    ui_msg "# and to stop beanstalkd, run:"
+    ui_msg "# "
+    ui_msg "# sudo launchctl unload -w /Library/LaunchDaemons/org.macports.beanstalkd.plist"
+    ui_msg "###########################################################"
+}
