--- a/dports/gnome/libcroco/Portfile
+++ b/dports/gnome/libcroco/Portfile
@@ -24,6 +24,8 @@ checksums       md5     1429c597aa4b75fc610ab3a542c99209 \
                 sha1    4b0dd540a47f2492b1ac7cd7e3ec63c2ef4c9c2a \
                 rmd160  402daf6ef986f90998449c254822080b38e28cd7
 
+depends_build   port:pkgconfig
+
 depends_lib     port:gettext \
                 path:lib/pkgconfig/glib-2.0.pc:glib2 \
                 port:libiconv \
