--- a/dports/net/wget/Portfile
+++ b/dports/net/wget/Portfile
@@ -6,7 +6,7 @@ PortGroup               muniversal 1.0
 
 name                    wget
 version                 1.12
-revision                2
+revision                3
 categories              net www
 maintainers             ryandesign
 license                 GPLv3
@@ -83,7 +83,7 @@ post-patch {
 
 post-destroot {
     # Install documentation.
-    set docdir ${destroot}${prefix}/share/doc/${name}-${version}
+    set docdir ${destroot}${prefix}/share/doc/${name}
     xinstall -d ${docdir}
     foreach docfile {AUTHORS COPYING MAILING-LIST NEWS README} {
         xinstall -W ${worksrcpath} -m 0644 ${docfile} ${docdir}/${docfile}.txt
