--- a/dports/gnome/libcroco/Portfile
+++ b/dports/gnome/libcroco/Portfile
@@ -4,7 +4,7 @@ PortSystem      1.0
 
 name            libcroco
 version         0.6.2
-revision        1
+revision        2
 license         LGPL-2
 set branch      [join [lrange [split ${version} .] 0 1] .]
 categories      gnome
@@ -36,7 +36,7 @@ test.run        yes
 test.env        DYLD_LIBRARY_PATH=${worksrcpath}/src/.libs
 
 post-destroot {
-    set docdir ${prefix}/share/doc/${name}-${version}
+    set docdir ${prefix}/share/doc/${name}
     xinstall -d ${destroot}${docdir}
     xinstall -m 0644 -W ${worksrcpath} AUTHORS COPYING ChangeLog NEWS README \
         ${destroot}${docdir}
