dcmtk: fix docdir
git-svn-id: https://svn.macports.org/repository/macports/trunk@71641 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/graphics/dcmtk/Portfile
+++ b/dports/graphics/dcmtk/Portfile
@@ -6,7 +6,7 @@ name                        dcmtk
 version                     3.5.4_p2
 set unpatched_version       [lindex [split ${version} _] 0]
 set stripped_version        [string map {. ""} ${unpatched_version}]
-revision                    2
+revision                    3
 categories                  graphics
 platforms                   darwin
 maintainers                 nomaintainer
@@ -68,3 +68,5 @@ post-patch {
 }
 
 use_parallel_build          no
+
+destroot.args               docdir=${destroot}${prefix}/share/doc/${name}
