--- a/dports/gnome/gdm/Portfile
+++ b/dports/gnome/gdm/Portfile
@@ -7,7 +7,7 @@
 PortSystem	1.0
 
 name		gdm
-version		2.26.1
+version		2.30.5
 set branch      [join [lrange [split ${version} .] 0 1] .]
 description	The Gnome Display Manager is a re-implementation of the well known xdm program.
 long_description	\
@@ -18,23 +18,32 @@ categories	gnome
 platforms	darwin
 homepage	http://www.gnome.org/
 master_sites	gnome:sources/${name}/${branch}/
-checksums       md5     c2c15f8b741962f278fa7e790aaa9a2b \
-                sha1    7c0b665c1235b903b58e5bfff8678e435529ff6c \
-                rmd160  abba568b616d5837f6aeedf3d2759a349df66c9e
 
-depends_build	port:p5-xml-parser \
-	        port:pkgconfig \
+checksums       md5     dfafa14306e5ea091ea775f1445d227e \
+                sha1    c19cc6a6dd796bf5a0bd4a5702b47d25b238a209 \
+                rmd160  fe781bc67fdddfb8e447823425ac12c452e44c9e
+
+depends_build	port:pkgconfig \
+                port:intltool \
 	        port:gnome-doc-utils
 
-depends_lib	port:gnome-panel \
-	        port:libxklavier
+depends_lib	port:gconf \
+                port:libcanberra \
+	        port:libxklavier \
+                port:upower \
+                port:gnome-panel
 
+depends_run     port:gnome-session \
+                port:gnome-settings-daemon \
+                port:at-spi
+                
 use_bzip2	yes
 
 patchfiles      patch-fink-gdm-modified.diff \
                 patch-configure.diff \
                 patch-daemon-gdm-display-access-file.c.diff \
                 fgetpwent.diff
+
 if {${os.major} <= 9 && ${os.platform} == "darwin"} {
     patchfiles-append pam_location.diff
 }
@@ -43,13 +52,20 @@ post-patch {
         reinplace "s|@MP_PREFIX@|${prefix}|" ${worksrcpath}/configure
 }
 
-configure.args	--mandir=${prefix}/share/man \
-                --x-includes=${prefix}/include \
+configure.args	--x-includes=${prefix}/include \
                 --x-libraries=${prefix}/lib \
+                --without-console-kit \
                 --without-selinux \
+                --disable-schemas-install \
                 --disable-scrollkeeper
 
 configure.ldflags-append "-lresolv"
+
+#
+# gnome-panel is not universal
+#
+
+universal_variant no
 
 startupitem.create	yes
 startupitem.name	gdm
@@ -70,6 +86,9 @@ pre-activate {
 
 post-activate {
 	system "scrollkeeper-update"
+        system "export GCONF_CONFIG_SOURCE=`gconftool-2 --get-default-source` && \
+           gconftool-2 --makefile-install-rule ${prefix}/etc/gconf/schemas/*.schemas"
+        system "${prefix}/bin/update-desktop-database -q ${prefix}/share/applications; true"
 	file mkdir ${prefix}/var/gdm
 	file attributes ${prefix}/var/gdm -owner gdm -group gdm
 }
