mpich2: fix documentation and examples directories (see #26527) and remove questionable mpecheckinstall and mpeuninstall scripts
git-svn-id: https://svn.macports.org/repository/macports/trunk@71648 d073be05-634f-4543-b044-5fe20cf6d1d6

--- a/dports/science/mpich2/Portfile
+++ b/dports/science/mpich2/Portfile
@@ -4,6 +4,7 @@
 PortSystem          1.0
 name                mpich2
 version             1.2.1p1
+revision            1
 categories          science parallel net
 platforms           darwin
 maintainers         nomaintainer
@@ -31,9 +32,9 @@ configure.args      --with-thread-package=posix \
                     --enable-timer-type=gettimeofday \
                     --enable-cxx \
                     --mandir=${prefix}/share/man \
-                    --with-htmldir=${prefix}/share/doc/${name} \
+                    --docdir=${prefix}/share/doc/${name} \
+                    --htmldir=${prefix}/share/doc/${name} \
                     --includedir=${prefix}/include/${name} \
-                    --with-docdir=${prefix}/share/doc/${name} \
                     --with-python=${prefix}/bin/python2.5 \
                     --disable-f77 --disable-f90
 
@@ -74,6 +75,24 @@ variant gforker description {Use gforker process manager instead of the default 
 
 platform darwin {
    configure.args-append   --enable-sharedlibs=osx-gcc
+}
+
+post-destroot {
+    # Fix misplaced documentation directories
+    foreach d {jumpshot-4 www4} {
+        move ${destroot}${prefix}/share/doc/${d} ${destroot}${prefix}/share/doc/${name}/${d}
+    }
+    
+    # Fix misplaced examples directories
+    xinstall -d ${destroot}${prefix}/share/examples/${name}
+    foreach p {collchk graphics logging} {
+        move ${destroot}${prefix}/share/examples_${p} ${destroot}${prefix}/share/examples/${name}/${p}
+    }
+    
+    # Remove questionable scripts
+    foreach f {mpecheckinstall mpeuninstall} {
+        delete ${destroot}${prefix}/sbin/${f}
+    }
 }
 
 livecheck.type      regex
